--- a/src/Components/SubHeader/subheader.scss
+++ b/src/Components/SubHeader/subheader.scss
@@ -1,6 +1,7 @@
 .subheader{
   display: flex;
   justify-content: space-between;
+  padding: 20px 20px 0 20px;
   &__info{
     display: flex;
     align-items: center;
