--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,14 @@
 .app{
   display: grid;
   grid-template-areas: "menu header header"
-                       "menu main main";
+                       "menu main main"
+                        "menu main main";
 }
 
 .main{
   font-size: 150px;
   grid-area: main;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .header{
