--- a/src/Components/FilterBlock/filterBlock.scss
+++ b/src/Components/FilterBlock/filterBlock.scss
@@ -2,14 +2,18 @@
   transition: all 1s;
   margin-top: 20px;
   overflow: hidden;
+  border-bottom: 2px solid black;
   &__title{
     text-transform: uppercase;
+    margin-left: 12px;
+    font-weight: 400;
   }
   &__wrapper{
     display: flex;
     justify-content: space-between;
   }
   &__button{
+    margin-right: 12px;
     border: none;
     cursor: pointer;
     img{
