--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,8 +1,7 @@
 .header{
+  display: block;
   top: 0;
   position: sticky;
   z-index: 5;
   background: white;
-  padding: 20px 20px 0 20px;
-  border-bottom: 2px solid black;
 }
